--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,4 +7,9 @@
     <resource-env-ref>
         <resource-env-ref-name>jdbc/pool4library</resource-env-ref-name>
     </resource-env-ref>
+
+    <context-param>
+        <param-name>origin</param-name>
+        <param-value>localhost</param-value>
+    </context-param>
 </web-app>
